# libtexce

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
apps/matrix/: CMakeLists.txt  CMakePresets.json
apps/matrix/ce/: CMakeLists.txt  CMakePresets.json
apps/matrix/core/ce/: smoke_main.cpp
apps/matrix/core/include/matrix_core/: arena.hpp  config.hpp  det_detail.hpp  error.hpp  explanation.hpp  latex.hpp  matrix.hpp  matrix_core.hpp  ops.hpp  rational.hpp  row_ops.hpp  row_reduction.hpp  slab.hpp  writer.hpp
apps/matrix/core/src/: det_detail.cpp  explanation.cpp  latex_view.cpp  matrix_view.cpp  ops_basic_view.cpp  ops_cramer.cpp  ops_det_ondemand.cpp  ops_det_replace_column_ondemand.cpp  ops_inverse_ondemand.cpp  ops_minor_cofactor_ondemand.cpp  ops_rref_ondemand.cpp  rational.cpp  row_ops.cpp
apps/matrix/core/tests/: test_arena_guards.cpp  test_cramer.cpp  test_det.cpp  test_inverse.cpp  test_matrix_ops.cpp  test_minor_cofactor.cpp  test_rational.cpp  test_rref.cpp
apps/matrix/portce/: CMakeLists.txt
apps/matrix/src/: app.cpp  app.h  app_draw.cpp  input.cpp  main.cpp  main_portce.cpp  matrix_ops.cpp  rational.cpp  screens_dispatch.cpp  screens_element_output.cpp  screens_element_picker.cpp  screens_main_menu.cpp  screens_matrices_menu.cpp  screens_matrix_editor.cpp  screens_matrix_resize.cpp  screens_matrix_resize.h  screens_operations_menu.cpp  screens_result_view.cpp  screens_slot_picker.cpp  screens_steps_menu.cpp  screens_steps_view.cpp  screens_stub.cpp  steps.cpp  steps.h  ui_menu.cpp
assets/: TeXFonts.8xv  TeXScrpt.8xv  clibs.8xg
autotests/: .gitignore  Makefile  export_images.cpp  update_hashes.py
autotests/casegen/: autotest_template.json  cases.c  cases.h  generate_autotests.c  makefile_template.mk
autotests/common/: test_harness.h
cmake/: CEdevToolchain.cmake
demo/: demo_text.cpp
demo/ce/: CMakeLists.txt  CMakePresets.json  demo_text.c  demo_text.cpp  demo_thread.c  stress_math.cpp
demo/portce/: CMakeLists.txt
ide/: clangd_compat.h
include/: texfont.h
src/tex/: tex.h  tex_arena.c  tex_arena.h  tex_draw.c  tex_fonts.c  tex_fonts.h  tex_internal.h  tex_layout.c  tex_measure.c  tex_measure.h  tex_metrics.c  tex_metrics.h  tex_parse.c  tex_parse.h  tex_pool.c  tex_pool.h  tex_renderer.c  tex_renderer.h  tex_symbols.c  tex_symbols.h  tex_token.c  tex_token.h  tex_types.h  tex_util.c  tex_util.h
tests/: test_arena.c  test_draw.c  test_errors.c  test_layout.c  test_measure.c  test_parse.c  test_pool.c  test_symbols.c  test_token.c
tools/: build_tex_fonts.sh  process_fonts.py  profile_format.c  tex_main.txt  tex_script.txt
